# gutenberg

./: .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  TODOS.md  docker-compose.yml  explore_pdf.py  extract_ao_quotes.py  extract_ao_quotes_v2.py  extract_ao_quotes_v3.py  extract_final_quotes.py  extract_real_quotes.py  librechat-custom.css  librechat-index.html  librechat.yaml  main.py  next-steps.md  pyproject.toml  verify_ao_eval_v2.py
frontend/: README.md  package-lock.json  svelte.config.js  vite.config.ts
scripts/: ab_test_pipeline.py  ablation_test.py  audit_contextcite.py  batch_ingest.py  build_precis_gold.py  citation_visual_regression.py  debug_chunks.py  embedding_comparison.py  eval_alce.py  eval_atp.py  eval_citations.py  eval_contextual_ablation.py  eval_donut_metadata.py  eval_feature_matrix.py  eval_gauntlet.py  eval_graph_ablation.py  eval_openrouter.py  eval_precis.py  eval_raptor_ablation.py  eval_retrieval.py  extract_ao_eval_v2.py  extract_eval_ground_truth.py  healthcheck.py  ingest.py  ingest_atp.py  ingest_surya.py  merge_precis_gold.py  mine_eval_golds.py  nightly_eval.sh  perf_baselines.py  preprocess_spreads.py  reindex.py  reindex_noctx.py  reindex_st.py  reingest.py  retro_upgrade.py  run_citation_eval.py  runpod_eval_harness.py  runpod_full_eval.py  runpod_ocr.py  (+4 more)
tests/: conftest.py  test_api_routers.py  test_auth.py  test_chat.py  test_chunker.py  test_citation_formatter.py  test_database.py  test_eval.py  test_extractors.py  test_pdf_endpoint.py  test_pipeline_quality.py  test_rag.py  test_rag_prompt.py  test_verification.py  (+5 more)
(+196 files in other folders)
